--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "hpc"
-version = "1.0.0"
+name = "quantacc"
+version = "0.1.0"
 edition = "2021"
 build = "build.rs"
 
@@ -43,7 +43,7 @@ variable_time_eq = []
 cfg-if = "1.0.0"
 unsafe_target_feature = "*"
 libc = "*"
-hpc-macros = { path = "./macros" }
+quantacc-macros = { path = "./macros" }
 
 [build-dependencies]
 rustc_version = "*"
