--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "quantacc"
+name = "tachyon"
 version = "0.1.0"
 edition = "2021"
 build = "build.rs"
@@ -43,7 +43,7 @@ variable_time_eq = []
 cfg-if = "1.0.0"
 unsafe_target_feature = "*"
 libc = "*"
-quantacc-macros = { path = "./macros" }
+tachyon-macros = { path = "./macros" }
 
 [build-dependencies]
 rustc_version = "*"
