--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ tachyon-macros = { path = "./macros" }
 
 [build-dependencies]
 rustc_version = "*"
+cfg_aliases = "0.1.0"
 
 [dev-dependencies]
 criterion = { version = "*", default-features = false }
